fix: remove overflow and format fix

--- a/src/react/components/common/condensedList/condensedList.scss
+++ b/src/react/components/common/condensedList/condensedList.scss
@@ -4,7 +4,6 @@
     display: flex;
     flex-grow: 1;
     flex-direction: column;
-    overflow: hidden;
 
     &-header {
         font-size: 80%;
